# Poly-Maker-RS

./: .gitignore  README.md  README_zh.md  environment.yml
poly_maker/: Cargo.toml
poly_maker/src/: config.rs  gamma.rs  main.rs  ws_market.rs
poly_maker/src/execution/: mod.rs
poly_maker/src/strategy/: gate.rs  mod.rs  params.rs  planner.rs  simulate.rs  state.rs
scripts/: check_exec_quality.sh  check_fill_estimator.sh  check_live_shadow.sh  check_multi_pnl.sh  check_round_quality.sh  check_run.sh  compare_estimator_matrix.py  plot_roll10_diagnostics.py  plot_window_story.py  run_entry_buffer_matrix.sh  run_estimator_matrix.sh  run_multi_paper_safe.py  run_paper.sh  run_recommend.sh  summarize_multi.py  summary_run.py  validate_market_slug.py
